# FYP-LMS

./: docker-compose.yml
lms-husnain/: .gitignore  Dockerfile  package-lock.json  package.json  reset.js  tsconfig.json
lms-husnain/python/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
lms-husnain/python/app/: __init__.py  main.py
lms-husnain/python/app/api/: routes.py
lms-husnain/python/app/config/: settings.py
lms-husnain/python/app/models/: schemas.py
lms-husnain/python/app/services/: __init__.py  face_detector.py  face_recognizer.py
lms-husnain/python/app/utils/: image_utils.py
lms-husnain/src/: app.ts
lms-husnain/src/config/: auth.ts  database.ts  email.ts
lms-husnain/src/controllers/: AttendanceController.ts  DashboardController.ts  LectureController.ts  UserController.ts  authController.ts  courseController.ts  enrollmentController.ts  quizController.ts
lms-husnain/src/db/: index.ts  schema.ts
lms-husnain/src/db/migrations/: 0000_flat_korg.sql  0001_clear_daredevil.sql  (+5 more)
lms-husnain/src/middleware/: auth.ts  validation.ts
lms-husnain/src/routes/: UserRoutes.ts  attendance.ts  auth.ts  courses.ts  dashboard.ts  enrollments.ts  lectureRoutes.ts  quizzes.ts
lms-husnain/src/services/: emailService.ts  faceService.ts  googleMeetService.ts
lms-husnain/src/types/: auth.ts  course.ts  enrollment.ts  quiz.ts
lms-husnain/src/uploads/: index.ts
lms-husnain/src/utils/: password.ts  rollNumber.ts  tokenUtils.ts
lms-husnain/src/validations/: auth.ts  course.ts  enrollment.ts  quiz.ts
(+13 files in other folders)
